--- a/plataforma_ong/index.html
+++ b/plataforma_ong/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
   <title>ONG Solidária - Início</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+<link rel="stylesheet" href="css/styles.css">
+
 <body>
   <a href="#main-content" class="skip-link">Pular para o conteúdo</a>
-  
+
   <header>
     <h1>ONG Solidária</h1>
     <nav role="navigation" aria-label="Menu principal">
@@ -67,5 +70,7 @@
   <footer>
     <p>&copy; 2025 ONG Solidária - Todos os direitos reservados</p>
   </footer>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
